add xhr + promise

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.4.0/axios.js" integrity="sha512-RjvSEaeDqPCfUVQ9kna2/2OqHz/7F04IOl1/66LmQjB/lOeAzwq7LrbTzDbz5cJzlPNJ5qteNtHR56XaJSTNWw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>    
     <script>
-        // XHR (XMLHttpRequest) ------------------------------------------------------------------------------
+        // XHR () ------------------------------------------------------------------------------
         const request = new XMLHttpRequest();
         request.open('GET' , 'https://jsonplaceholder.typicode.com/users');
         request.send();
